Version 1.7 -Eta Carinae-

* [NEW] File galleries: Up to 6 files can be uploaded at once. 
* [NEW] Forums control to view posts from the last X hours/days only.
* [NEW] File galleries dupes are now prevented.
* [NEW] File galleries improved, listings are configurable, files can be moved and
  deleted. Better interface. etc
* [NEW] Banning system: Admin can ban users or IPs from specific sections of Tiki,
  rules accept dates (suspensions). Usernames accept regexes, IPs accept wildcards
  example: 23.*.*.*
* [NEW] Forums: Tiki distinguishes between read and unread posts
* [NEW] WML&PDA Integration using HawHaw: Use tiki-wap.php to access a Phone/PDA 
  friendly version of the Wiki.
* [NEW] Forum attachments added, you can setup which forums admit attachments and who
  can attach files to forum posts. 
* [NEW] Added forum discussion button to wiki page view: allows users to go straight to
  forum for page discussion.
* [NEW] Drawings history added. From the admin drawings panel you can view the history,
  remove versions, etc.
* [NEW] Drawings jGraphPad replaced jHotDraw, lot of new features and tools to edit
  drawings which can be included in any parsed tiki object.
* [NEW] Forums: Breadcrumb added. Links to next/prev topic when browsing threads
  added.
* [NEW] Forums: Topic summaries added and can be used (optional)
* [NEW] Forums: Topic smileys can be used
* [NEW] File galleries: you can edit the name/description of files (Joan)
* [NEW] File galleries: duplicate uploads are prevented.
* [NEW] Articles: topic or article image can 'float' around text optionally.
* [NEW] Forums: columns to be listed in topic listing can be
  configured per-forum.
* [NEW] Forums: columns to be listed in forum listing can be
  configured.
* [NEW] Notes in notepad remember parsing mode.
* [NEW] Notes in notepad can be viewed as smarty templates
* [NEW] Forum posts can be saved to the notepad.
* [NEW] Weblog posts can be saved to the notepad.